2.11.1 (24-02-2022)
- Bug fix - change isFirstTimeOnDegree method (according to DGES information)

2.11.0 (07-12-2021)
- Refactor: Change specifications packages to legalpt 
- Refactor: Update academic-core dependency

2.10.7 (01-10-2021)
- Feature: Add placeholder fields and some changes to conform to newest PAPNCE structure

2.10.6 (11-02-2021)
- Bug fix - Exclude extra curricular courses at isOnlyEnrolledOnCompetenceCourseType method - UL-ISA-2017


2.10.5 (06-02-2021)
- Refactor: Remove references of deprecated slots of qualification

2.10.4 (03-02-2021)
- Bug fix - isFirstTimeOnDegree - #UL-FC-2363

2.10.3 (22-01-2021)
- Bug fix: On A3ES export, replace non standard double quotes

2.10.2 (20-01-2021)
- Bug fix: On A3ES export, replace non standard dashes

2.10.1 (05-01-2021)
- Improvement: Added new XSD files for RAIDES 2020
- Bug fix: RAIDES: Validate mobility origin country

2.10.0 (09-11-2020)
- Improvement: Added excluded dregrees to RaidesInstance

2.9.7 (14-07-2020)
- Refactor: Upgraded dependency of fenixedu-academic-core and academic-extensions
- Bug fix: When exporting teacher jobs to A3ES, untie sort by comparing by externalId   

2.9.6 (25-04-2020)
- Refactor: Replace fenixedu-academic-treasury dependency by fenixedu-academic-treasury-base and fenixedu-academic-treasury-ui

2.9.5 (22-04-2020)
- Bug fix: Set default ResideConcelho with 9999 as default value only when PT is the country

2.9.4 (20-04-2020)
- Bug fix: Set default ResideConcelho with 9999 as default value

2.9.3 (04-04-2020)
- Refactor: Upgraded dependency of fenixedu-academic-core (removal of organizational Units subclasses)

2.9.2 (19-03-2020)
- Refactor: Upgraded dependency of fenixedu-academic-core (PrecedentDegreeInformation split into 'completed' and 'previous')

2.9.1 (16-03-2020)
- Bug fix: Correcting Java 11 release

2.9.0 (09-03-2020)
- New feature: Support for Java 11

2.8.8 (06-03-2020)
- Fix: A3es: both FCDs and FUCs don't send any data if no value is selected + fixed a typo