@@ -1,3 +1,5 @@
+- Feature: Add placeholder reportName and the delete to LegalReportRequest
+
 2.11.1 (24-02-2022)
 - Bug fix - change isFirstTimeOnDegree method (according to DGES information)
 
